# LanCuiZhiJian

./: .gitignore  LICENSE  README.md  README_EN.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: database.rs  fetch.rs  mod.rs
src/components/decorative/: CustomBackground.tsx  DecorativeElements.tsx  TraditionalPatterns.tsx
src/components/error/: ErrorBoundary.tsx  GlobalErrorBoundary.tsx
src/components/home/: BestPracticesCard.tsx
src/components/icons/: AboutIcon.tsx  DonateIcon.tsx  InfoIcon.tsx  NewTaskIcon.tsx  ResultIcon.tsx
src/components/language/: LanguageToggle.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/reader/: AIModelSelector.tsx  CheckpointResumeBanner.tsx  DownloadDialog.tsx  ExtractedAttachments.tsx  MarkdownRenderer.tsx  TaskControl.tsx
src/components/settings/: AIPerformanceMonitor.tsx  (+12 more)
src/contexts/: AppContext.tsx  TaskManagerContext.tsx
src/data/: ai-providers.ts  background-presets.ts
src/hooks/: useTaskLeaveHandler.ts  useTaskProcessor.ts  useTaskTransfer.ts  useTokenTracking.ts
src/i18n/: translations.ts  useTranslation.ts
src/stores/: useAIConfigStore.ts  useAppStore.ts  useBackgroundStore.ts  useExtractionConfigStore.ts  useHistoryStore.ts  useToastStore.ts
src/test/: setup.ts
src/types/: task.ts
src/utils/: charCount.ts  logger.ts
(+61 files in other folders)
